# nawfal-kitchen

./: README.md
kitchen_service/: .env  pyproject.toml
kitchen_service/app/: main.py  model.py  settings.py
order_service/: .env  README.md  pyproject.toml
order_service/app/: database.py  main.py  model.py  settings.py
