[tool.poetry]
name = "kitchen-service"
version = "0.1.0"
description = ""
authors = ["wajidminhas <shanitent667@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.11"
sqlmodel = "^0.0.23"
uvicorn = "^0.34.0"
requests = "^2.32.3"
psycopg = {extras = ["binary"], version = "^3.2.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
